force-app/main/default/objects/ILA_Zipcode__c/ILA_Zipcode__c.object-meta.xml
<CustomObject>
    <label>Zipcode</label>
    <nameField>
        <label>Zipcode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zipcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>