force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_Country__c.field-meta.xml
<CustomField>
    <fullName>ILA_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>