force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ILA_Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>USA</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>India</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mexico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>