force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_Lat_Long__c.field-meta.xml
<CustomField>
    <fullName>ILA_Lat_Long__c</fullName>
    <label>Latitude-Longitude</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>