force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_Place_Name__c.field-meta.xml
<CustomField>
    <fullName>ILA_Place_Name__c</fullName>
    <label>Place Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>