force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_Post_code__c.field-meta.xml
<CustomField>
    <fullName>ILA_Post_code__c</fullName>
    <label>Post code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>