force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_State__c.field-meta.xml
<CustomField>
    <fullName>ILA_State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>