force-app/main/default/objects/ILA_Zipcode__c/fields/ILA_State_abbreviation__c.field-meta.xml
<CustomField>
    <fullName>ILA_State_abbreviation__c</fullName>
    <label>State abbreviation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>